# gutenbird

./: .gitignore  .python-version  AGENTS.md  README.md  bird.py  cardmaker.py  electron.vite.config.mjs  enstruct.py  guten.py  index.html  main.js  package-electron.js  package.json  pyproject.toml  renderer.js
.github/workflows/: build-release.yml  pr-validation.yml  security-quality.yml  windows-build.yml
assets/icon/: app.icns
docs/: CELL_STACK.md  NAIVE.md  PARITY.md
electron-app/: index.html  main.js  package-lock.json  package.json  renderer.js
scripts/: generate-icons.mjs
src/main/: index.js
src/preload/: index.js
src/renderer/: App.jsx  index.html  main.jsx
